[package]
name = "convert_image_test"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.32.1", features = ["glow"] }
egui = "0.32.1"
egui_extras = "0.32.1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rfd = "0.15"


[profile.release]
lto = true
opt-level = "z"   # optimise pour la taille
codegen-units = 1 # meilleure optimisation possible
panic = "abort"   # réduit le code de panic