[package]
name = "recolor_image_app"
version = "0.1.0"
edition = "2024"
authors = ["Glubus"]

[dependencies]
eframe = { version = "0.32.1", features = ["glow"] }
egui_extras = "0.32.1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"] }
rfd = "0.15"


[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "RecolorImages"       # nom final de l'exécutable
path = "src/main.rs"

[package.metadata]
description = "A small app to recolor images with egui"
license = "MIT"
repository = "https://github.com/Glubus/recolor_image_app"